--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ colorama==0.4.6
 filelock==3.20.0
 Flask==3.1.2
 flask-cors==6.0.1
+Flask-SQLAlchemy==3.1.1
 fsspec==2025.10.0
+greenlet==3.2.4
 huggingface-hub==0.36.0
 idna==3.11
 itsdangerous==2.2.0
